fix(patterns/hero): remove unnecessary z-index

--- a/packages/styles/components/_c.hero.scss
+++ b/packages/styles/components/_c.hero.scss
@@ -81,9 +81,7 @@
 
   &__boxed {
     flex: 100%;
-    position: relative;
     margin-top: -$mu600;
-    z-index: 10;
 
     @include set-from-screen('m') {
       margin-top: -$mu500;
